# syria-tv-ai-studio

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  my_report.txt  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
data/raw/: youtube_titles_ الجزيرة.xlsx  youtube_titles_ الحدث .xlsx  youtube_titles_ العربي.xlsx  youtube_titles_ العربية.xlsx  youtube_titles_ تلفزيون سوريا.xlsx
docs/: SESSION_CONTEXT.md
outputs/: report_2026-07-16_19-38-21.md  report_2026-07-16_19-39-26.md  report_2026-07-16_20-05-37.md  report_2026-07-16_20-36-09.md  report_2026-07-16_20-49-59.md  report_2026-07-17_05-46-08.md  report_2026-07-17_06-14-53.md  report_2026-07-17_06-46-01.md  report_2026-07-17_06-56-58.md  report_2026-07-17_07-03-27.md  report_2026-07-17_07-57-46.md  report_2026-07-17_09-14-30.md  report_2026-07-17_10-00-41.md  report_2026-07-17_10-04-43.md  report_2026-07-17_11-37-12.md  report_2026-07-17_11-39-23.md  report_2026-07-17_11-43-59.md  report_2026-07-17_11-44-40.md  report_2026-07-17_11-58-58.md  report_2026-07-17_12-06-15.md  report_2026-07-17_12-07-31.md  report_2026-07-17_12-14-56.md  report_2026-07-17_12-30-12.md  report_2026-07-17_12-46-44.md  report_2026-07-17_15-33-17.md  report_2026-07-17_15-57-15.md  report_2026-07-17_16-01-49.md  report_2026-07-17_16-15-38.md
outputs/checkpoints/: checkpoint_047cb2285bc6.json  checkpoint_2026-07-17_06-51-45.json  checkpoint_2026-07-17_06-54-46.json  (+25 more)
scripts/: build_rag_if_needed.py  convert_excel_to_jsonl.py  ingest_titles.py  process_report.py  process_report_v2.py  run.py
web/: server.py
(+59 files in other folders)
