[project]
name = "stv-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alhashema26-ux", email = "alhashema26@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic>=0.116.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "google-genai>=2.11.0",
    "jinja2>=3.1.6",
    "openai>=2.45.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.51.0",
    "voyageai>=0.5.0",
]

[project.scripts]
stv-studio = "stv_studio:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
